z-index fix

--- a/public/style.css
+++ b/public/style.css
@@ -205,6 +205,7 @@ header {
 	overflow-y: auto;
 	justify-content: center;
 	text-align: center;
+	z-index: 3;
 }
 
 .no-scroll {
